--- a/notebooks/ta_110_support_vector_machine.ipynb
+++ b/notebooks/ta_110_support_vector_machine.ipynb
@@ -18,19 +18,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# defining working directory\n",
-    "data_filepath = '/Users/thomasadler/Desktop/futuristic-platipus/data/'\n",
-    "model_filepath = '/Users/thomasadler/Desktop/futuristic-platipus/models/'\n",
-    "dictionary_filepath='/Users/thomasadler/Desktop/futuristic-platipus/data_dictionary/'\n",
-    "images_filepath = '/Users/thomasadler/Desktop/futuristic-platipus/images/'"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -116,16 +103,6 @@
    "source": [
     "#data dictionary\n",
     "Image(dictionary_filepath+\"5-Modelling-Data-Dictionary.png\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#set random seed for consistent results\n",
-    "rand_seed=1"
    ]
   },
   {
@@ -699,36 +676,9 @@
     }
    ],
    "source": [
-    "#compare ROCs on train and test\n",
-    "\n",
-    "plt.subplots(1,2, figsize=(10,5))\n",
-    "plt.subplot(1,2,1)\n",
-    "plt.plot([0,1], [0,1], color='black', linestyle='--')\n",
-    "plt.title('Receiver Operating Characteristic (ROC) Curve - SVC Train')\n",
-    "plt.plot(fpr_train_base, tpr_train_base, color='green', lw=2,\n",
-    "    label='Baseline AUC = %0.2f' % roc_auc_train_base)\n",
-    "plt.plot(fpr_train_opt, tpr_train_opt, color='red', lw=2,\n",
-    "    label='Optimised AUC = %0.2f' % roc_auc_train_opt)\n",
-    "plt.xlabel('False Positive Rate')\n",
-    "plt.ylabel('True Positive Rate')\n",
-    "plt.legend(loc=\"best\")\n",
-    "plt.tight_layout()\n",
-    "plt.grid()\n",
-    "\n",
-    "plt.subplot(1,2,2)\n",
-    "plt.plot([0,1], [0,1], color='black', linestyle='--')\n",
-    "plt.title('Receiver Operating Characteristic (ROC) Curve - SVC Test')\n",
-    "plt.plot(fpr_test_base, tpr_test_base, color='green', lw=2,\n",
-    "    label='Baseline AUC = %0.2f' % roc_auc_test_base)\n",
-    "plt.plot(fpr_test_opt, tpr_test_opt, color='red', lw=2,\n",
-    "    label='Optimised AUC = %0.2f' % roc_auc_test_opt)\n",
-    "plt.xlabel('False Positive Rate')\n",
-    "plt.ylabel('True Positive Rate')\n",
-    "plt.legend(loc=\"best\")\n",
-    "plt.tight_layout()\n",
-    "plt.grid()\n",
-    "\n",
-    "plt.show()"
+    "#visualising roc curve\n",
+    "plot_curve_roc('SVC', fpr_train_base, tpr_train_base, roc_auc_train_base, fpr_train_opt, tpr_train_opt, roc_auc_train_opt, fpr_test_base,\n",
+    " tpr_test_base, roc_auc_test_base,  fpr_test_opt, tpr_test_opt, roc_auc_test_opt)"
    ]
   },
   {
@@ -757,36 +707,9 @@
     }
    ],
    "source": [
-    "#compare Precision/Recall Curve on train and test\n",
-    "\n",
-    "plt.subplots(1,2, figsize=(10,5))\n",
-    "plt.subplot(1,2,1)\n",
-    "plt.plot([1,0], [0,1], color='black', linestyle='--')\n",
-    "plt.title('Precision/Recall Curve - SVC Train')\n",
-    "plt.plot(recall_train_base_plot, precision_train_base_plot, color='green', lw=2,\n",
-    "    label='Baseline AUC = %0.2f' % pr_auc_train_base)\n",
-    "plt.plot(recall_train_opt_plot, precision_train_opt_plot, color='red', lw=2,\n",
-    "    label='Optimised AUC = %0.2f' % pr_auc_train_opt)\n",
-    "plt.xlabel('Recall')\n",
-    "plt.ylabel('Precision')\n",
-    "plt.legend(loc=\"best\")\n",
-    "plt.tight_layout()\n",
-    "plt.grid()\n",
-    "\n",
-    "plt.subplot(1,2,2)\n",
-    "plt.plot([1,0], [0,1], color='black', linestyle='--')\n",
-    "plt.title('Precision/Recall Curve - SVC Test')\n",
-    "plt.plot(recall_test_base_plot, precision_test_base_plot, color='green', lw=2,\n",
-    "    label='Baseline AUC = %0.2f' % pr_auc_test_base)\n",
-    "plt.plot(recall_test_opt_plot, precision_test_opt_plot, color='red', lw=2,\n",
-    "    label='Optimised AUC = %0.2f' % pr_auc_test_opt)\n",
-    "plt.xlabel('Recall')\n",
-    "plt.ylabel('Precision')\n",
-    "plt.legend(loc=\"best\")\n",
-    "plt.tight_layout()\n",
-    "plt.grid()\n",
-    "\n",
-    "plt.show()"
+    "#visualising precision/recall curve\n",
+    "plot_curve_prec_recall('SVC', recall_train_base_plot, precision_train_base_plot, pr_auc_train_base, recall_train_opt_plot, precision_train_opt_plot, pr_auc_train_opt,\n",
+    " recall_test_base_plot, precision_test_base_plot,  pr_auc_test_base, recall_test_opt_plot, precision_test_opt_plot, pr_auc_test_opt)"
    ]
   },
   {
