--- a/notebooks/ta_100_gaussian_naive_bayes.ipynb
+++ b/notebooks/ta_100_gaussian_naive_bayes.ipynb
@@ -663,7 +663,7 @@
     "            'Recall Train Plot':[recall_train_base_plot], 'PR AUC Train':[pr_auc_train_base], 'Accuracy Test': accuracy_test_base,\\\n",
     "                'Precision Test': [precision_test_base], 'Recall Test': [recall_test_base], 'F1 Test': [f1_test_base], 'FPR Test Plot': [fpr_test_base],\\\n",
     "                    'TPR Test Plot':[tpr_test_base], 'ROC AUC Test':[roc_auc_test_base], 'Precision Test Plot': [precision_test_base_plot],\\\n",
-    "                        'Recall Test Plot':[recall_test_base_plot], 'PR AUC Test':[pr_auc_test_base], 'Time Fit': time_fit_base, 'Time Predict': time_predict_test_base}\n",
+    "                        'Recall Test Plot':[recall_test_base_plot], 'PR AUC Test':[pr_auc_test_base], 'Time Fit': time_fit_base, 'Time Predict': time_predict_test_base, \"Recall Negative Test\": 0.47}\n",
     "\n",
     "#to dataframe\n",
     "best_model_result_df=pd.DataFrame(data=d)\n",
