--- a/notebooks/ta_110_support_vector_machine.ipynb
+++ b/notebooks/ta_110_support_vector_machine.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/thomasadler/opt/anaconda3/lib/python3.9/site-packages/xgboost/compat.py:36: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import MultiIndex, Int64Index\n"
+     ]
+    }
+   ],
    "source": [
     "# importing relevant packages and functions\n",
     "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_00_packages_functions.py"
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +104,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,14 +215,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to fit the model on the training set is 29.604 seconds\n",
+      "Time to fit the model on the training set is 23.844 seconds\n",
       "Accuracy score for train set is is: 0.6506798677954309\n",
       "Accuracy score for test set is is:0.6219620282688809\n"
      ]
@@ -244,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +409,7 @@
     "# look at the accuracy of the test score depending on the penalty\n",
     "\n",
     "# set range of penalties\n",
-    "c_range = [0.001, 0.001, 0.01, 0.1, 1, 10, 100, 1000]\n",
+    "c_range = [0.001, 0.01, 0.1, 1, 10, 100, 1000]\n",
     "accuracy_scores = pd.DataFrame()\n",
     "\n",
     "for c in c_range:\n",
@@ -459,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -473,11 +482,11 @@
    ],
    "source": [
     "# setting up which models/scalers we want to grid search\n",
-    "estimator = [('scaler', StandardScaler()), ('SVC', LinearSVC(max_iter=500))]\n",
+    "estimator = [('scaler', StandardScaler()), ('reduce_dim', PCA()), ('SVC', LinearSVC(max_iter=500))]\n",
     "\n",
     "# defining distribution of parameters we want to compare\n",
-    "param = [{\"SVC__C\": c_range,\n",
-    "\"SVC__penalty\":['l1', 'l2']}]\n",
+    "param = {\"SVC__C\": c_range,\n",
+    "\"SVC__penalty\":['l1', 'l2']}\n",
     "\n",
     "# run cross validation\n",
     "pipeline_cross_val_grid(estimator, param, X_train_res, y_train_res, X_test, y_test)"
@@ -487,7 +496,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The optimal model has a penalty of 0.01, using the Ridge regularisation. The penalty added to the cost function is the coefficients squared (Ridge), as opposed to taking their absolute value (Lasso). This penalty is very small and we expect it not to affect our model too strongly."
+    "The optimal model has a penalty of 0.001, using the Ridge regularisation. The penalty added to the cost function is the coefficients squared (Ridge), as opposed to taking their absolute value (Lasso). This penalty is very small and we expect it not to affect our model too strongly."
    ]
   },
   {
@@ -866,7 +875,7 @@
     "            'Recall Train Plot':[recall_train_base_plot], 'PR AUC Train':[pr_auc_train_base], 'Accuracy Test': accuracy_test_base,\\\n",
     "                'Precision Test': [precision_test_base], 'Recall Test': [recall_test_base], 'F1 Test': [f1_test_base], 'FPR Test Plot': [fpr_test_base],\\\n",
     "                    'TPR Test Plot':[tpr_test_base], 'ROC AUC Test':[roc_auc_test_base], 'Precision Test Plot': [precision_test_base_plot],\\\n",
-    "                        'Recall Test Plot':[recall_test_base_plot], 'PR AUC Test':[pr_auc_test_base], 'Time Fit': time_fit_base, 'Time Predict': time_predict_test_base}\n",
+    "                        'Recall Test Plot':[recall_test_base_plot], 'PR AUC Test':[pr_auc_test_base], 'Time Fit': time_fit_base, 'Time Predict': time_predict_test_base, \"Recall Negative Test\": 0.55}\n",
     "\n",
     "#to dataframe\n",
     "best_model_result_df=pd.DataFrame(data=d)\n",
