--- a/notebooks/ta_70_k_nearest_neighbors.ipynb
+++ b/notebooks/ta_70_k_nearest_neighbors.ipynb
@@ -663,7 +663,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On the whole, the optimised model actually performs worse than the baseline model. We infer this from the accuracy score which is lower by 6 percentage points and all accuracy metrics decreasing, apart from the precision score for functioning points. However, the optimised model took much less time to predict the outcome variable for the test set (<1sec vs >4sec)."
+    "On the whole, the optimised model actually performs worse than the baseline model. We infer this from the accuracy score which is lower by 6 percentage points and all accuracy metrics decreasing, apart from the precision score for functioning points. However, the optimised model does have a higher recall score, and this is the metric we are most interested in. As a result we go with the optimised model. In addition, it took much less time to predict the outcome variable for the test set (<1sec vs >4sec)."
    ]
   },
   {
@@ -752,7 +752,7 @@
    ],
    "source": [
     "#export model results\n",
-    "joblib.dump(KNN_base, model_filepath+'k_nearest_neighbors_model.sav')"
+    "joblib.dump(KNN_opt, model_filepath+'k_nearest_neighbors_model.sav')"
    ]
   },
   {
@@ -875,13 +875,13 @@
    ],
    "source": [
     "#export best model in dataframe\n",
-    "d = {'Model':['K Nearest Neighbors'], 'Parameters':['Neighbors=5, Standard Scaler'], 'Accuracy Train': [accuracy_train_base],\\\n",
-    "    'Precision Train': [precision_train_base], 'Recall Train': [recall_train_base], 'F1 Train': [f1_train_base], 'FPR Train Plot': [fpr_train_base],\\\n",
-    "        'TPR Train Plot':[tpr_train_base], 'ROC AUC Train':[roc_auc_train_base], 'Precision Train Plot': [precision_train_base_plot],\\\n",
-    "            'Recall Train Plot':[recall_train_base_plot], 'PR AUC Train':[pr_auc_train_base], 'Accuracy Test': accuracy_test_base,\\\n",
-    "                'Precision Test': [precision_test_base], 'Recall Test': [recall_test_base], 'F1 Test': [f1_test_base], 'FPR Test Plot': [fpr_test_base],\\\n",
-    "                    'TPR Test Plot':[tpr_test_base], 'ROC AUC Test':[roc_auc_test_base], 'Precision Test Plot': [precision_test_base_plot],\\\n",
-    "                        'Recall Test Plot':[recall_test_base_plot], 'PR AUC Test':[pr_auc_test_base], 'Time Fit': time_fit_base, 'Time Predict': time_predict_test_base}\n",
+    "d = {'Model':['K Nearest Neighbors'], 'Parameters':['Neighbors=4, Standard Scaler'], 'Accuracy Train': [accuracy_train_opt],\\\n",
+    "    'Precision Train': [precision_train_opt], 'Recall Train': [recall_train_opt], 'F1 Train': [f1_train_opt], 'FPR Train Plot': [fpr_train_opt],\\\n",
+    "        'TPR Train Plot':[tpr_train_opt], 'ROC AUC Train':[roc_auc_train_opt], 'Precision Train Plot': [precision_train_opt_plot],\\\n",
+    "            'Recall Train Plot':[recall_train_opt_plot], 'PR AUC Train':[pr_auc_train_opt], 'Accuracy Test': accuracy_test_opt,\\\n",
+    "                'Precision Test': [precision_test_opt], 'Recall Test': [recall_test_opt], 'F1 Test': [f1_test_opt], 'FPR Test Plot': [fpr_test_opt],\\\n",
+    "                    'TPR Test Plot':[tpr_test_opt], 'ROC AUC Test':[roc_auc_test_opt], 'Precision Test Plot': [precision_test_opt_plot],\\\n",
+    "                        'Recall Test Plot':[recall_test_opt_plot], 'PR AUC Test':[pr_auc_test_opt], 'Time Fit': time_fit_opt, 'Time Predict': time_predict_test_opt,  \"Recall Negative Test\": 0.65}\n",
     "\n",
     "#to dataframe\n",
     "best_model_result_df=pd.DataFrame(data=d)\n",
