--- a/notebooks/ta_80_decision_tree.ipynb
+++ b/notebooks/ta_80_decision_tree.ipynb
@@ -1324,7 +1324,7 @@
     "            'Recall Train Plot':[recall_train_opt_plot], 'PR AUC Train':[pr_auc_train_opt], 'Accuracy Test': accuracy_test_opt,\\\n",
     "                'Precision Test': [precision_test_opt], 'Recall Test': [recall_test_opt], 'F1 Test': [f1_test_opt], 'FPR Test Plot': [fpr_test_opt],\\\n",
     "                    'TPR Test Plot':[tpr_test_opt], 'ROC AUC Test':[roc_auc_test_opt], 'Precision Test Plot': [precision_test_opt_plot],\\\n",
-    "                        'Recall Test Plot':[recall_test_opt_plot], 'PR AUC Test':[pr_auc_test_opt], 'Time Fit': time_fit_opt, 'Time Predict': time_predict_test_opt}\n",
+    "                        'Recall Test Plot':[recall_test_opt_plot], 'PR AUC Test':[pr_auc_test_opt], 'Time Fit': time_fit_opt, 'Time Predict': time_predict_test_opt, \"Recall Negative Test\": 0.62}\n",
     "\n",
     "#to dataframe\n",
     "best_model_result_df=pd.DataFrame(data=d)\n",
