--- a/notebooks/ta_130_xgboost.ipynb
+++ b/notebooks/ta_130_xgboost.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/thomasadler/opt/anaconda3/lib/python3.9/site-packages/xgboost/compat.py:36: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import MultiIndex, Int64Index\n"
+     ]
+    }
+   ],
    "source": [
     "# importing relevant packages and functions\n",
     "%run /Users/thomasadler/Desktop/futuristic-platipus/notebooks/ta_00_packages_functions.py"
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +104,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -196,15 +205,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[13:23:16] WARNING: /Users/runner/miniforge3/conda-bld/xgboost-split_1645117948562/work/src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
-      "Time to fit the model on the training set is 19.78 seconds\n"
+      "[00:04:48] WARNING: /Users/runner/miniforge3/conda-bld/xgboost-split_1645117948562/work/src/learner.cc:576: \n",
+      "Parameters: { \"verbose\" } might not be used.\n",
+      "\n",
+      "  This could be a false alarm, with some parameters getting used by language bindings but\n",
+      "  then being mistakenly passed down to XGBoost core, or some parameter actually being used\n",
+      "  but getting flagged wrongly here. Please open an issue if you find any such cases.\n",
+      "\n",
+      "\n",
+      "[00:04:49] WARNING: /Users/runner/miniforge3/conda-bld/xgboost-split_1645117948562/work/src/learner.cc:1115: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
+      "Time to fit the model on the training set is 23.71 seconds\n"
      ]
     }
    ],
@@ -231,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +334,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to predict the outcome variable for the test set is 0.034 seconds\n"
+      "Time to predict the outcome variable for the test set is 0.044 seconds\n"
      ]
     }
    ],
@@ -671,6 +688,13 @@
    "metadata": {},
    "source": [
     "We run a randomised cross validation through a pipeline to find the optimal hyperparameters. We choose a randomised as opposed to a grid search because adaboost models are very expensive. For the same reasons mentioned above, we stick to the default number of trees, 50."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We choose not test for PCA (dimensionality reduction) because the majority of our models (including AdaBoost) did not choose to reduce dimensions. The AdaBoost model had to run for 20minutes, so we will avoid this by not testing for PCA as we do not have any confidence that it will be useful for XGBoost."
    ]
   },
   {
@@ -1245,7 +1269,7 @@
     "            'Recall Train Plot':[recall_train_base_plot], 'PR AUC Train':[pr_auc_train_base], 'Accuracy Test': accuracy_test_base,\\\n",
     "                'Precision Test': [precision_test_base], 'Recall Test': [recall_test_base], 'F1 Test': [f1_test_base], 'FPR Test Plot': [fpr_test_base],\\\n",
     "                    'TPR Test Plot':[tpr_test_base], 'ROC AUC Test':[roc_auc_test_base], 'Precision Test Plot': [precision_test_base_plot],\\\n",
-    "                        'Recall Test Plot':[recall_test_base_plot], 'PR AUC Test':[pr_auc_test_base], 'Time Fit': time_fit_base, 'Time Predict': time_predict_test_base}\n",
+    "                        'Recall Test Plot':[recall_test_base_plot], 'PR AUC Test':[pr_auc_test_base], 'Time Fit': time_fit_base, 'Time Predict': time_predict_test_base, \"Recall Negative Test\": 0.65}\n",
     "\n",
     "#to dataframe\n",
     "best_model_result_df=pd.DataFrame(data=d)\n",
