--- a/notebooks/ta_60_logistic_regression.ipynb
+++ b/notebooks/ta_60_logistic_regression.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -220,14 +220,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to fit the model on the training set is 0.663 seconds\n"
+      "Time to fit the model on the training set is 0.57 seconds\n"
      ]
     }
    ],
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to predict the outcome variable for the test set is 0.01 seconds\n"
+      "Time to predict the outcome variable for the test set is 0.007 seconds\n"
      ]
     }
    ],
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
     "plt.plot(range(1,components+1), np.cumsum(pca.explained_variance_ratio_ * 100))\n",
     "plt.xlabel(\"Number of components\")\n",
     "plt.ylabel(\"Explained variance (%)\")\n",
-    "plt.title(\"Variance is explained relatively uniformly over variables\")\n",
+    "plt.title(\"Half of our components explains the majority of our data\")\n",
     "plt.grid()\n",
     "plt.show()"
    ]
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,14 +619,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to fit the model on the training set is 0.623 seconds\n"
+      "Time to fit the model on the training set is 0.398 seconds\n"
      ]
     }
    ],
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -826,12 +826,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The precision/recall curve is not a very useful visualisation so we will refrain from visualising these plots in the future."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Visualising feature importance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +898,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +926,7 @@
        "['/Users/thomasadler/Desktop/futuristic-platipus/models/logistic_regression_model.sav']"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -961,13 +968,12 @@
        "      <th>Precision Train</th>\n",
        "      <th>Recall Train</th>\n",
        "      <th>F1 Train</th>\n",
-       "      <th>FPR Train Plot</th>\n",
-       "      <th>TPR Train Plot</th>\n",
        "      <th>ROC AUC Train</th>\n",
-       "      <th>Precision Train Plot</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Recall Test Plot</th>\n",
-       "      <th>PR AUC Test</th>\n",
+       "      <th>Accuracy Test</th>\n",
+       "      <th>Precision Test</th>\n",
+       "      <th>Recall Test</th>\n",
+       "      <th>F1 Test</th>\n",
+       "      <th>ROC AUC Test</th>\n",
        "      <th>Time Fit</th>\n",
        "      <th>Time Predict</th>\n",
        "      <th>Precision Non-functioning Test</th>\n",
@@ -987,15 +993,14 @@
        "      <td>0.651419</td>\n",
        "      <td>0.651419</td>\n",
        "      <td>0.651419</td>\n",
-       "      <td>[0.0, 0.0, 0.0, 1.4496115041168967e-05, 1.4496...</td>\n",
-       "      <td>[0.0, 1.4496115041168967e-05, 0.00047837179635...</td>\n",
        "      <td>0.710467</td>\n",
-       "      <td>[0.5000869918227686, 0.5000833677678461, 0.500...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>[1.0, 0.9999419144981413, 0.9998838289962825, ...</td>\n",
-       "      <td>0.870664</td>\n",
-       "      <td>0.623483</td>\n",
-       "      <td>0.002351</td>\n",
+       "      <td>0.626813</td>\n",
+       "      <td>0.741167</td>\n",
+       "      <td>0.626813</td>\n",
+       "      <td>0.662988</td>\n",
+       "      <td>0.640127</td>\n",
+       "      <td>0.397975</td>\n",
+       "      <td>0.001858</td>\n",
        "      <td>0.65</td>\n",
        "      <td>0.65</td>\n",
        "      <td>0.65</td>\n",
@@ -1005,41 +1010,29 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 30 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                 Model                          Parameters  Accuracy Train  \\\n",
        "0  Logistic Regression  Penalty=l2, C=0.1, Standard Scaler        0.651419   \n",
        "\n",
-       "   Precision Train  Recall Train  F1 Train  \\\n",
-       "0         0.651419      0.651419  0.651419   \n",
+       "   Precision Train  Recall Train  F1 Train  ROC AUC Train  Accuracy Test  \\\n",
+       "0         0.651419      0.651419  0.651419       0.710467       0.626813   \n",
        "\n",
-       "                                      FPR Train Plot  \\\n",
-       "0  [0.0, 0.0, 0.0, 1.4496115041168967e-05, 1.4496...   \n",
-       "\n",
-       "                                      TPR Train Plot  ROC AUC Train  \\\n",
-       "0  [0.0, 1.4496115041168967e-05, 0.00047837179635...       0.710467   \n",
-       "\n",
-       "                                Precision Train Plot  ...  \\\n",
-       "0  [0.5000869918227686, 0.5000833677678461, 0.500...  ...   \n",
-       "\n",
-       "                                    Recall Test Plot  PR AUC Test  Time Fit  \\\n",
-       "0  [1.0, 0.9999419144981413, 0.9998838289962825, ...     0.870664  0.623483   \n",
+       "   Precision Test  Recall Test   F1 Test  ROC AUC Test  Time Fit  \\\n",
+       "0        0.741167     0.626813  0.662988      0.640127  0.397975   \n",
        "\n",
        "   Time Predict  Precision Non-functioning Test  Recall Non-functioning Test  \\\n",
-       "0      0.002351                            0.65                         0.65   \n",
+       "0      0.001858                            0.65                         0.65   \n",
        "\n",
-       "  F1 Non-functioning Test Precision Functioning Test  Recall Functioning Test  \\\n",
-       "0                    0.65                       0.65                     0.65   \n",
+       "   F1 Non-functioning Test  Precision Functioning Test  \\\n",
+       "0                     0.65                        0.65   \n",
        "\n",
-       "  F1 Functioning Test  \n",
-       "0                0.65  \n",
-       "\n",
-       "[1 rows x 30 columns]"
+       "   Recall Functioning Test  F1 Functioning Test  \n",
+       "0                     0.65                 0.65  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1047,14 +1040,11 @@
    "source": [
     "#export best model in dataframe\n",
     "d = {'Model':['Logistic Regression'], 'Parameters':['Penalty=l2, C=0.1, Standard Scaler'], 'Accuracy Train': [accuracy_train_opt],\\\n",
-    "    'Precision Train': [precision_train_opt], 'Recall Train': [recall_train_opt], 'F1 Train': [f1_train_opt], 'FPR Train Plot': [fpr_train_opt],\\\n",
-    "        'TPR Train Plot':[tpr_train_opt], 'ROC AUC Train':[roc_auc_train_opt], 'Precision Train Plot': [precision_train_opt_plot],\\\n",
-    "            'Recall Train Plot':[recall_train_opt_plot], 'PR AUC Train':[pr_auc_train_opt], 'Accuracy Test': accuracy_test_opt,\\\n",
-    "                'Precision Test': [precision_test_opt], 'Recall Test': [recall_test_opt], 'F1 Test': [f1_test_opt], 'FPR Test Plot': [fpr_test_opt],\\\n",
-    "                    'TPR Test Plot':[tpr_test_opt], 'ROC AUC Test':[roc_auc_test_opt], 'Precision Test Plot': [precision_test_opt_plot],\\\n",
-    "                        'Recall Test Plot':[recall_test_opt_plot], 'PR AUC Test':[pr_auc_test_opt], 'Time Fit': time_fit_opt,\\\n",
-    "                            'Time Predict': time_predict_test_opt, \"Precision Non-functioning Test\": 0.65, \"Recall Non-functioning Test\": 0.65,\\\n",
-    "                                \"F1 Non-functioning Test\": 0.65,\"Precision Functioning Test\": 0.65, \"Recall Functioning Test\": 0.65,\"F1 Functioning Test\": 0.65}\n",
+    "    'Precision Train': [precision_train_opt], 'Recall Train': [recall_train_opt], 'F1 Train': [f1_train_opt], 'ROC AUC Train':[roc_auc_train_opt],\\\n",
+    "        'Accuracy Test': accuracy_test_opt, 'Precision Test': [precision_test_opt], 'Recall Test': [recall_test_opt], 'F1 Test': [f1_test_opt],\\\n",
+    "            'ROC AUC Test':[roc_auc_test_opt], 'Time Fit': time_fit_opt,\\\n",
+    "                'Time Predict': time_predict_test_opt, \"Precision Non-functioning Test\": 0.65, \"Recall Non-functioning Test\": 0.65,\\\n",
+    "                    \"F1 Non-functioning Test\": 0.65,\"Precision Functioning Test\": 0.65, \"Recall Functioning Test\": 0.65,\"F1 Functioning Test\": 0.65}\n",
     "\n",
     "#to dataframe\n",
     "best_model_result_df=pd.DataFrame(data=d)\n",
@@ -1065,12 +1055,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "#export new dataset\n",
     "best_model_result_df.to_csv(model_filepath + 'logistic_regression_model.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#list of metrics we want to visualise\n",
+    "metrics=[fpr_train_opt, tpr_train_opt, fpr_test_opt, tpr_test_opt]\n",
+    "metrics_name=['fpr_train_opt', 'tpr_train_opt', 'fpr_test_opt', 'tpr_test_opt']\n",
+    "\n",
+    "#save numpy arrays for model comparison\n",
+    "for metric, metric_name in zip(metrics, metrics_name):\n",
+    "    np.save(model_filepath+f'logistic_regression_{metric_name}', metric)"
    ]
   }
  ],
