changed name of files

--- a/notebooks/ta_8_k_nearest_neighbors.ipynb
+++ b/notebooks/ta_8_k_nearest_neighbors.ipynb
@@ -355,7 +355,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to predict the outcome variable for the test set is 4.735 seconds\n"
+      "Time to predict the outcome variable for the test set is 6.516 seconds\n"
      ]
     }
    ],
@@ -470,8 +470,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The model with the best CV score has the following parameters: {'reduce_dim__n_components': 0.6, 'KNN__n_neighbors': 2}.\n",
-      "The best model has an accuracy score of 0.6736121909500855 on the test set\n"
+      "The model with the best CV score has the following parameters: {'reduce_dim': None, 'KNN__n_neighbors': 1}.\n",
+      "The best model has an accuracy score of 0.769553724148655 on the test set\n"
      ]
     }
    ],
@@ -541,7 +541,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to fit the model on the training set is 0.041 seconds\n"
+      "Time to fit the model on the training set is 0.034 seconds\n"
      ]
     }
    ],
@@ -654,7 +654,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to predict the outcome variable for the test set is 0.215 seconds\n"
+      "Time to predict the outcome variable for the test set is 0.166 seconds\n"
      ]
     }
    ],
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
        "['/Users/thomasadler/Desktop/futuristic-platipus/models/k_nearest_neighbors_model.sav']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -804,8 +804,8 @@
        "      <td>0.678122</td>\n",
        "      <td>0.709156</td>\n",
        "      <td>0.720382</td>\n",
-       "      <td>0.040682</td>\n",
-       "      <td>0.214999</td>\n",
+       "      <td>0.034317</td>\n",
+       "      <td>0.166168</td>\n",
        "      <td>0.33</td>\n",
        "      <td>0.65</td>\n",
        "      <td>0.44</td>\n",
@@ -825,10 +825,10 @@
        "0         0.884488      0.870462  0.869269       0.967214       0.678122   \n",
        "\n",
        "   Precision Test  Recall Test   F1 Test  ROC AUC Test  Time Fit  \\\n",
-       "0        0.781206     0.678122  0.709156      0.720382  0.040682   \n",
+       "0        0.781206     0.678122  0.709156      0.720382  0.034317   \n",
        "\n",
        "   Time Predict  Precision Non-functioning Test  Recall Non-functioning Test  \\\n",
-       "0      0.214999                            0.33                         0.65   \n",
+       "0      0.166168                            0.33                         0.65   \n",
        "\n",
        "   F1 Non-functioning Test  Precision Functioning Test  \\\n",
        "0                     0.44                        0.89   \n",
@@ -837,7 +837,7 @@
        "0                     0.69                 0.77  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
